tests/field/get_on_bool.out
[31merror[error]: 'bool' object has no attribute 'foo'
----- Traceback -----
  ┌─ <unknown>:1:8
  | 
1 | True.foo
  |         ^
[0m